<resources>
  <string name="app_name">PopularMovies</string>

  <string name="popular_movies">Top Trending Movies this season.</string>
  <string name="top_rated">Top Rated movies</string>
  <string name="movie_title"></string>

  <string name="drawer_open">Open Drawer</string>

  <string name="drawer_closed">Closed Drawer</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_main2">Main2Activity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>

  <string name="desc">An imageview placeholder to display the movie poster</string>

  <string name="release">release :</string>

  <string name="adult">Adult :</string>
  <string name="adult_value">adult value</string>

  <string name="date">date here</string>

  <string name="rating">Rating :</string>
  <string name="rate_value">value here</string>
  <string name="Original_title">Original Title :</string>
  <string name="original_title_value">Name here</string>
  <string name="overview">Overview</string>
  <string name="sandra">name</string>
  <string name="movies">Movies</string>
  <string name="tv">Tv Series</string>
  <string name="music">Music</string>
  <string name="books">Books</string>
  <string name="additionals">Additionals</string>
  <string name="settings">Settings</string>
  <string name="title">Title</string>
</resources>
